--- a/stylesVisita.css
+++ b/stylesVisita.css
@@ -1,24 +1,27 @@
 body {
+  background-color: #F0E68C; /* Cor de fundo em hexadecimal */
+  color: white;
+  font-family: Arial, sans-serif;
   margin: 0;
+  padding: 0;
+}
+
+.container {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+.photo-gallery {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-  height: 100vh;
+  margin-top: 20px;
 }
 
-.gallery {
-  display: flex;
-  overflow: hidden;
-}
-
-.image {
+.photo-gallery img {
   max-width: 100%;
   height: auto;
-  cursor: pointer;
-  transition: transform 0.3s;
 }
 
-.image:hover {
-  transform: scale(1.1);
-}
 
