--- a/stylesVisita.css
+++ b/stylesVisita.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #F0E68C; /* Cor de fundo em hexadecimal */
+  background-color: #F0E68C; 
   color: white;
   font-family: Arial, sans-serif;
   margin: 0;
