--- a/stylesVisita.css
+++ b/stylesVisita.css
@@ -1,12 +1,21 @@
 /* stylesVisita.css */
 .gallery {
-  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  max-width: 1000px; /* Defina a largura máxima desejada para a galeria */
+  margin: 0 auto;
 }
+
 .image {
-  width: 100%; /* Defina o tamanho máximo desejado */
+  max-width: 100%; /* Defina a largura máxima desejada para as imagens */
   height: auto;
-  max-width: 600px; /* Defina a largura máxima desejada */
+  width: auto; /* Para manter a proporção original */
+  border: 1px solid #ddd;
 }
+
 .prev, .next {
   position: absolute;
   top: 50%;
@@ -14,9 +23,11 @@
   cursor: pointer;
   font-size: 24px;
 }
+
 .prev {
   left: 10px;
 }
+
 .next {
   right: 10px;
 }
