--- a/stylesVisita.css
+++ b/stylesVisita.css
@@ -1,6 +1,15 @@
 /* stylesVisita.css */
 .gallery {
-  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+.image {
+  max-width: 100%;
+  height: auto;
+  width: 100%;
+  object-fit: contain;
+  border: 1px solid #ddd;
 }
 .prev, .next {
   position: absolute;
