--- a/stylesVisita.css
+++ b/stylesVisita.css
@@ -2,15 +2,20 @@
 .gallery {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
   gap: 10px;
+  max-width: 1000px; /* Defina a largura máxima desejada para a galeria */
+  margin: 0 auto;
 }
+
 .image {
-  max-width: 100%;
+  max-width: 100%; /* Defina a largura máxima desejada para as imagens */
   height: auto;
-  width: 100%;
-  object-fit: contain;
+  width: auto; /* Para manter a proporção original */
   border: 1px solid #ddd;
 }
+
 .prev, .next {
   position: absolute;
   top: 50%;
@@ -18,9 +23,11 @@
   cursor: pointer;
   font-size: 24px;
 }
+
 .prev {
   left: 10px;
 }
+
 .next {
   right: 10px;
 }
