--- a/stylesVisita.css
+++ b/stylesVisita.css
@@ -1,18 +1,18 @@
-/* stylesVisita.css */
+
 .gallery {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   gap: 10px;
-  max-width: 1000px; /* Defina a largura máxima desejada para a galeria */
+  max-width: 200px; 
   margin: 0 auto;
 }
 
 .image {
-  max-width: 100%; /* Defina a largura máxima desejada para as imagens */
+  max-width: 200%; 
   height: auto;
-  width: auto; /* Para manter a proporção original */
+  width: auto; 
   border: 1px solid #ddd;
 }
 
