--- a/stylesVisita.css
+++ b/stylesVisita.css
@@ -6,13 +6,13 @@
   justify-content: center;
   align-items: center;
   gap: 10px;
-  max-width: 200px; 
+  max-width: 500px; 
   margin: 0 auto;
 }
 
 .image {
   max-width: 100%; 
-  height: 200px;
+  height: auto;
   width: auto; 
   border: 4px solid #ddd;
 }
