--- a/radio.css
+++ b/radio.css
@@ -20,10 +20,10 @@ body {
 
 @keyframes neonGlow {
     0% {
-        filter: brightness(1.5) drop-shadow(0 0 10px orange);
+        filter: brightness(1.5) drop-shadow(0 0 10px cyan);
     }
     100% {
-        filter: brightness(1) drop-shadow(0 0 5px orange);
+        filter: brightness(1) drop-shadow(0 0 5px cyan);
     }
 }
 
@@ -40,7 +40,7 @@ body {
 }
 
 .audio-info {
-    color: red;
+    color: cyan;
     font-size: 18px;
     margin-bottom: 10px;
 }
