--- a/radio.css
+++ b/radio.css
@@ -108,14 +108,15 @@ button:hover {
     text-shadow: 0 0 10px cyan, 0 0 20px cyan, 0 0 30px cyan, 0 0 40px cyan, 0 0 50px cyan, 0 0 60px cyan, 0 0 70px cyan;
 }
 
+
 .beat {
-    width: 50px;
-    height: 50px;
-    background-color: rgba(0, 128, 0, 0.7);
+    width: 20px;
+    height: 20px;
+    background-color: cyan;
     border-radius: 50%;
     position: absolute;
-    bottom: 20px;
-    left: calc(50% - 25px);
+    bottom: 60px; 
+    left: calc(50% - 10px);
     transform-origin: center bottom;
     animation: beatAnimation 0.2s linear alternate infinite;
 }
@@ -130,3 +131,4 @@ button:hover {
         opacity: 0;
     }
 }
+
